syntax = "proto3";

option java_package = "dev.sebastiano.bundel.proto";
option java_multiple_files = true;

message BundelPreferences {

    bool isCrashlyticsEnabled = 1;
    bool isOnboardingSeen = 2;

//    enum WeekDay {
//        MONDAY = 0;
//        TUESDAY = 1;
//        WEDNESDAY = 2;
//        THURSDAY = 3;
//        FRIDAY = 4;
//        SATURDAY = 5;
//        SUNDAY = 6;
//    }

    map<string, bool> scheduleDays = 3;

    repeated ProtoTimeRange timeRanges = 4;

    bool isMigratedFromSharedPrefs = 5;

    message ProtoTimeRange {
        int32 from = 1;
        int32 to = 2;
    }
}
